; ModuleID = '/home/carl/AnghaBench/skynet/lualib-src/extr_lua-mongo.c_write_int32.c'
source_filename = "/home/carl/AnghaBench/skynet/lualib-src/extr_lua-mongo.c_write_int32.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.buffer = type { i32*, i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.buffer*, i32)* @write_int32 to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @write_int32(%struct.buffer* %0, i32 %1) #0 {
  %3 = alloca %struct.buffer*, align 8
  %4 = alloca i32, align 4
  %5 = alloca i32, align 4
  store %struct.buffer* %0, %struct.buffer** %3, align 8
  store i32 %1, i32* %4, align 4
  %6 = load i32, i32* %4, align 4
  store i32 %6, i32* %5, align 4
  %7 = load %struct.buffer*, %struct.buffer** %3, align 8
  %8 = call i32 @buffer_reserve(%struct.buffer* %7, i32 4)
  %9 = load i32, i32* %5, align 4
  %10 = and i32 %9, 255
  %11 = load %struct.buffer*, %struct.buffer** %3, align 8
  %12 = getelementptr inbounds %struct.buffer, %struct.buffer* %11, i32 0, i32 0
  %13 = load i32*, i32** %12, align 8
  %14 = load %struct.buffer*, %struct.buffer** %3, align 8
  %15 = getelementptr inbounds %struct.buffer, %struct.buffer* %14, i32 0, i32 1
  %16 = load i32, i32* %15, align 8
  %17 = add nsw i32 %16, 1
  store i32 %17, i32* %15, align 8
  %18 = sext i32 %16 to i64
  %19 = getelementptr inbounds i32, i32* %13, i64 %18
  store i32 %10, i32* %19, align 4
  %20 = load i32, i32* %5, align 4
  %21 = ashr i32 %20, 8
  %22 = and i32 %21, 255
  %23 = load %struct.buffer*, %struct.buffer** %3, align 8
  %24 = getelementptr inbounds %struct.buffer, %struct.buffer* %23, i32 0, i32 0
  %25 = load i32*, i32** %24, align 8
  %26 = load %struct.buffer*, %struct.buffer** %3, align 8
  %27 = getelementptr inbounds %struct.buffer, %struct.buffer* %26, i32 0, i32 1
  %28 = load i32, i32* %27, align 8
  %29 = add nsw i32 %28, 1
  store i32 %29, i32* %27, align 8
  %30 = sext i32 %28 to i64
  %31 = getelementptr inbounds i32, i32* %25, i64 %30
  store i32 %22, i32* %31, align 4
  %32 = load i32, i32* %5, align 4
  %33 = ashr i32 %32, 16
  %34 = and i32 %33, 255
  %35 = load %struct.buffer*, %struct.buffer** %3, align 8
  %36 = getelementptr inbounds %struct.buffer, %struct.buffer* %35, i32 0, i32 0
  %37 = load i32*, i32** %36, align 8
  %38 = load %struct.buffer*, %struct.buffer** %3, align 8
  %39 = getelementptr inbounds %struct.buffer, %struct.buffer* %38, i32 0, i32 1
  %40 = load i32, i32* %39, align 8
  %41 = add nsw i32 %40, 1
  store i32 %41, i32* %39, align 8
  %42 = sext i32 %40 to i64
  %43 = getelementptr inbounds i32, i32* %37, i64 %42
  store i32 %34, i32* %43, align 4
  %44 = load i32, i32* %5, align 4
  %45 = ashr i32 %44, 24
  %46 = and i32 %45, 255
  %47 = load %struct.buffer*, %struct.buffer** %3, align 8
  %48 = getelementptr inbounds %struct.buffer, %struct.buffer* %47, i32 0, i32 0
  %49 = load i32*, i32** %48, align 8
  %50 = load %struct.buffer*, %struct.buffer** %3, align 8
  %51 = getelementptr inbounds %struct.buffer, %struct.buffer* %50, i32 0, i32 1
  %52 = load i32, i32* %51, align 8
  %53 = add nsw i32 %52, 1
  store i32 %53, i32* %51, align 8
  %54 = sext i32 %52 to i64
  %55 = getelementptr inbounds i32, i32* %49, i64 %54
  store i32 %46, i32* %55, align 4
  ret void
}

declare dso_local i32 @buffer_reserve(%struct.buffer*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
